Acrescentando header no index.html

--- a/index.html
+++ b/index.html
@@ -6,3 +6,11 @@
     <title>Hello Kitty</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+<body>
+    <header>
+        <h2>Bem-vindo ao Mundo da Hello Kitty</h2>
+    </header>
+
+</body>
+</html>
