Acrescentando o footer no index.html

--- a/index.html
+++ b/index.html
@@ -20,5 +20,10 @@
         <button id="msgButton">Clique para uma mensagem especial</button>
     </main>
 
+    <footer>
+        <p>© 2024 Mundo da Hello Kitty</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
